kubernetes/apps/infrastructure/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-cross-namespace-ingress
spec:
  description: "Allow ingress from gateway, cluster workloads (smtp2graph/smtp-relay consumers) and external clients (vlmcsd, off-cluster smtp)"
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: network
    - fromEntities:
        - cluster
        - world
